--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".crypto_app.CryptoActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
             android:name=".lessons.lesson_02.Users2Activity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
@@ -21,6 +29,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".lessons.lesson_02.UsersActivity"
             android:exported="false"
